--- a/index.Rmd
+++ b/index.Rmd
@@ -14,6 +14,8 @@ This website is a quick way to learn about me!
 
 It contains links about my e-mail and Github account, resume and the simple data analysis displayed by a dashbroad.
 
+I come from Canton, China. I got my Bachelor of Science in *Applied Statistics(Biological statistics)* in *Southern Medical University (SMU)*, and I am currently pursuing a master's degree in *biostatistics* at *Columbia University in the city of New York*. 
+
 It's me!
 
 ![](me.jpg)
@@ -25,7 +27,28 @@ Here's my [resume](about.html)
 
 # [Dashbroad](dashbroad.html)
 
-The data is about New York state weather stations from January 1, 1981 through December 31, 2010. 
+The data is about weather in New York state, collected by New York state weather stations from January 1, 1981 through December 31, 2010. 
 
-Three plots are made to compare the snow and snow depth, the number of snowy days and temperature across time.
+Three plots are made to compare the snowfall and snow depth, the number of snowy days and temperature across time.
 
+`Chart A`
+
+We can see that the snow depth decreases across the time given the similar snowfall.
+
+`Chart B`
+
+There is a broad trend that the numbers of snowy days are decreasing across time.
+
+`Chart C`
+
+The median of maximum temperature in a day is periodically fluctuated across time.
+
+# Contact Information
+
+Ruoyuan Qian
+
+Columbia University in the city of New York
+
+Email: rq2166@cumc.columbia.edu
+
+Phone: 6468866173
